# ros-ocp-test-automation

./: .gitignore  Jenkinsfile  README.md  main.py  pyproject.toml
api/: sources.py
lib/: config.py  utils.py
tests/: dry_run_expected_res.json  test_dry_run.py
tests/fixtures/: common_fixtures.py
